--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
 
     <!-- Names for each day of the week -->
     <string name="monday_label">Mon</string>
+    <string name="tuesday_label">Tue</string>
+    <string name="wednesday_label">Wed</string>
+    <string name="thursday_label">Thu</string>
+    <string name="friday_label">Fri</string>
 </resources>
