--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!-- Clear/Save/Close button names -->
     <string name="clear_button_label">Clear</string>
     <string name="save_button_label">Save</string>
+    <string name="load_button_label">Load</string>
     <string name="close_button_label">Close</string>
 
     <!-- Names for each day of the week -->
