Updated TODO list with new items. Updated activity_main with hints to make usage more clear for user.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="start_textview_label">Start</string>
     <string name="end_textview_label">End</string>
     <string name="date_textview_label">Week</string>
+
+    <!-- Hints -->
+    <string name="start_hint">Start</string>
+    <string name="end_hint">End</string>
+    <string name="date_hint"><font size="10">MM/DD/YYYY-MM/DD/YYYY</font></string>
 </resources>
