--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="wednesday_label">Wed</string>
     <string name="thursday_label">Thu</string>
     <string name="friday_label">Fri</string>
+    <string name="saturday_label">Sat</string>
+    <string name="sunday_label">Sun</string>
 
     <string name="start_textview_label">Start</string>
     <string name="end_textview_label">End</string>
